Bug 460157 - When erasing the last stroke of a color in a colorize mask, the stroke does not finish krita becomes unresponsive, starts using all system memory and shuts down after a minute
Summary: When erasing the last stroke of a color in a colorize mask, the stroke does n...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Colorize (other bugs)
Version First Reported In: 5.1.1
Platform: Microsoft Windows Microsoft Windows
: NOR crash
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
: 458418 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-10-09 12:12 UTC by deterrent.jam
Modified: 2022-11-04 11:52 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description deterrent.jam 2022-10-09 12:12:38 UTC
SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***
When erasing the last stroke of a color in a colorize mask, the stroke does not finish krita becomes unresponsive, starts using all system memory and shuts down after a minute

STEPS TO REPRODUCE
1. draw simple lines (to color in)
2.  using the colorize mask tool draw some colored lines
3.  instead of selecting a color and removing it use an eraser (brush or mode) to remove a color
4.  when the last bit of that specific color is removed the problem occurs. 

OBSERVED RESULT
The stroke appears to finish but Krita reports in the bottom right "colorize mask key stroke" and Krita becomes unresponsive.
During this time, (when checking in task manager) Krita begins to use all the RAM my computer has available (more than allotted in the performance settings of Krita). After 30 seconds to a few minutes, Krita closes itself, and when I look inside Krita I cannot find a crash report. 

EXPECTED RESULT
I would expect the stroke to be erased and the color removed from the colorize mask pallet when I do this.

SOFTWARE/OS VERSIONS
Windows: 10
Krita 5.1.1
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Ahab Greybeard 2022-10-09 12:53:51 UTC
I can confirm the observations of the OP for the 5.1.1 appimage and the Oct 08 5.2.0-prealpha (git ff161e4e84) appimage on Debian 10.

It's the removal by erasing of the last amount of any particular colour on the Colourise Mask palette that causes the problem.
i.e there is a colour on the mask palette in the Tool Options docker which does not have any stroke on the mask itself.

This does not happen if you use a different colour to overpaint a unique coloured stroke instead of erasing it.
Comment 2 Dmitry Kazakov 2022-11-04 11:47:21 UTC
*** Bug 458418 has been marked as a duplicate of this bug. ***
Comment 3 Dmitry Kazakov 2022-11-04 11:51:54 UTC
Git commit 8f0cda59f8bbefceb5484e14ae4433637e336676 by Dmitry Kazakov.
Committed on 04/11/2022 at 11:51.
Pushed by dkazakov into branch 'master'.

Fix a crash when adding/removing strokes to the colorize mask

M  +9    -5    libs/image/lazybrush/kis_colorize_mask.cpp

https://invent.kde.org/graphics/krita/commit/8f0cda59f8bbefceb5484e14ae4433637e336676
Comment 4 Dmitry Kazakov 2022-11-04 11:52:20 UTC
Git commit 4d94b8b0785af15fef51fa5cfcb2d7c384b4747a by Dmitry Kazakov.
Committed on 04/11/2022 at 11:52.
Pushed by dkazakov into branch 'krita/5.1'.

Fix a crash when adding/removing strokes to the colorize mask


(cherry picked from commit 8f0cda59f8bbefceb5484e14ae4433637e336676)

M  +9    -5    libs/image/lazybrush/kis_colorize_mask.cpp

https://invent.kde.org/graphics/krita/commit/4d94b8b0785af15fef51fa5cfcb2d7c384b4747a