Fix a crash when adding/removing strokes to the colorize mask

BUG:460157